--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="alternate icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ApexView Capital - Real-Time Stock Portfolio Tracker</title>
     <meta name="description" content="Professional real-time stock portfolio tracker with live price updates, P&L calculations, and comprehensive financial analytics" />
@@ -10,11 +12,11 @@
     <meta property="og:title" content="ApexView Capital - Real-Time Stock Portfolio Tracker" />
     <meta property="og:description" content="Professional real-time stock portfolio tracker with live price updates, P&L calculations, and comprehensive financial analytics" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/logo.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@ApexViewCapital" />
+    <meta name="twitter:image" content="/logo.svg" />
   </head>
 
   <body>
